--- a/lecture1/Lecture1.ipynb
+++ b/lecture1/Lecture1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
        "20.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,16 +37,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x11d3c2a10>]"
+       "[<matplotlib.lines.Line2D at 0x11fa3f490>]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        "0.0029999999995311555"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -144,16 +144,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Value(data=4.0)"
+       "Value(data=-8.0)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,25 +161,322 @@
    "source": [
     "class Value: \n",
     "\n",
-    "    def __init__(self, data):\n",
+    "    def __init__(self, data, _children=(), _op='', label=''):\n",
     "        self.data = data\n",
+    "        self.grad = 0.0\n",
+    "        self._prev = set(_children)\n",
+    "        self._op = _op\n",
+    "        self.label = label\n",
     "    \n",
     "    def __repr__(self):\n",
     "        return f\"Value(data={self.data})\"\n",
     "    \n",
     "    def __add__(self, other):\n",
-    "        out = Value(self.data + other.data)\n",
+    "        out = Value(self.data + other.data, (self, other), '+')\n",
     "        return out\n",
     "    \n",
     "    def __mul__(self, other):\n",
-    "        out = Value(self.data * other.data)\n",
-    "        return out \n",
+    "        out = Value(self.data * other.data, (self, other), '*')\n",
+    "        return out "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{Value(data=-6.0), Value(data=10.0)}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d._prev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'+'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d._op"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from graphviz import Digraph\n",
     "\n",
-    "a = Value(2.0)\n",
-    "b = Value(-3.0)\n",
-    "c = Value(10.0)\n",
-    "#Below calls the equivalent of (a.__mul__(b)).__add__(c)\n",
-    "a * b + c"
+    "def trace(root):\n",
+    "  # builds a set of all nodes and edges in a graph\n",
+    "  nodes, edges = set(), set()\n",
+    "  def build(v):\n",
+    "    if v not in nodes:\n",
+    "      nodes.add(v)\n",
+    "      for child in v._prev:\n",
+    "        edges.add((child, v))\n",
+    "        build(child)\n",
+    "  build(root)\n",
+    "  return nodes, edges\n",
+    "\n",
+    "def draw_dot(root):\n",
+    "  dot = Digraph(format='svg', graph_attr={'rankdir': 'LR'}) # LR = left to right\n",
+    "  \n",
+    "  nodes, edges = trace(root)\n",
+    "  for n in nodes:\n",
+    "    uid = str(id(n))\n",
+    "    # for any value in the graph, create a rectangular ('record') node for it\n",
+    "    dot.node(name = uid, label = \"{ %s | data %.4f | grad %.4f }\" % (n.label, n.data, n.grad), shape='record')\n",
+    "    if n._op:\n",
+    "      # if this value is a result of some operation, create an op node for it\n",
+    "      dot.node(name = uid + n._op, label = n._op)\n",
+    "      # and connect this node to it\n",
+    "      dot.edge(uid + n._op, uid)\n",
+    "\n",
+    "  for n1, n2 in edges:\n",
+    "    # connect n1 to the op node of n2\n",
+    "    dot.edge(str(id(n1)), str(id(n2)) + n2._op)\n",
+    "\n",
+    "  return dot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>\n",
+       "<!DOCTYPE svg PUBLIC \"-//W3C//DTD SVG 1.1//EN\"\n",
+       " \"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd\">\n",
+       "<!-- Generated by graphviz version 2.50.0 (0)\n",
+       " -->\n",
+       "<!-- Pages: 1 -->\n",
+       "<svg width=\"1148pt\" height=\"128pt\"\n",
+       " viewBox=\"0.00 0.00 1148.00 128.00\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
+       "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 124)\">\n",
+       "<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-124 1144,-124 1144,4 -4,4\"/>\n",
+       "<!-- 4826200592 -->\n",
+       "<g id=\"node1\" class=\"node\">\n",
+       "<title>4826200592</title>\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"316,-83.5 316,-119.5 508,-119.5 508,-83.5 316,-83.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"327.5\" y=\"-97.8\" font-family=\"Times,serif\" font-size=\"14.00\">c</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"339,-83.5 339,-119.5 \"/>\n",
+       "<text text-anchor=\"middle\" x=\"382.5\" y=\"-97.8\" font-family=\"Times,serif\" font-size=\"14.00\">data 10.0000</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"426,-83.5 426,-119.5 \"/>\n",
+       "<text text-anchor=\"middle\" x=\"467\" y=\"-97.8\" font-family=\"Times,serif\" font-size=\"14.00\">grad 0.0000</text>\n",
+       "</g>\n",
+       "<!-- 4826190800+ -->\n",
+       "<g id=\"node10\" class=\"node\">\n",
+       "<title>4826190800+</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"571\" cy=\"-73.5\" rx=\"27\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"571\" y=\"-69.8\" font-family=\"Times,serif\" font-size=\"14.00\">+</text>\n",
+       "</g>\n",
+       "<!-- 4826200592&#45;&gt;4826190800+ -->\n",
+       "<g id=\"edge5\" class=\"edge\">\n",
+       "<title>4826200592&#45;&gt;4826190800+</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M508.4,-84.49C517.69,-82.83 526.64,-81.23 534.71,-79.79\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"535.53,-83.2 544.76,-78 534.31,-76.31 535.53,-83.2\"/>\n",
+       "</g>\n",
+       "<!-- 4825585296 -->\n",
+       "<g id=\"node2\" class=\"node\">\n",
+       "<title>4825585296</title>\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"948,-27.5 948,-63.5 1140,-63.5 1140,-27.5 948,-27.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"960.5\" y=\"-41.8\" font-family=\"Times,serif\" font-size=\"14.00\">L</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"973,-27.5 973,-63.5 \"/>\n",
+       "<text text-anchor=\"middle\" x=\"1015.5\" y=\"-41.8\" font-family=\"Times,serif\" font-size=\"14.00\">data &#45;8.0000</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"1058,-27.5 1058,-63.5 \"/>\n",
+       "<text text-anchor=\"middle\" x=\"1099\" y=\"-41.8\" font-family=\"Times,serif\" font-size=\"14.00\">grad 0.0000</text>\n",
+       "</g>\n",
+       "<!-- 4825585296* -->\n",
+       "<g id=\"node3\" class=\"node\">\n",
+       "<title>4825585296*</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"885\" cy=\"-45.5\" rx=\"27\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"885\" y=\"-41.8\" font-family=\"Times,serif\" font-size=\"14.00\">*</text>\n",
+       "</g>\n",
+       "<!-- 4825585296*&#45;&gt;4825585296 -->\n",
+       "<g id=\"edge1\" class=\"edge\">\n",
+       "<title>4825585296*&#45;&gt;4825585296</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M912.28,-45.5C919.78,-45.5 928.44,-45.5 937.67,-45.5\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"937.87,-49 947.87,-45.5 937.87,-42 937.87,-49\"/>\n",
+       "</g>\n",
+       "<!-- 4825868432 -->\n",
+       "<g id=\"node4\" class=\"node\">\n",
+       "<title>4825868432</title>\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"2.5,-56.5 2.5,-92.5 187.5,-92.5 187.5,-56.5 2.5,-56.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"14\" y=\"-70.8\" font-family=\"Times,serif\" font-size=\"14.00\">a</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"25.5,-56.5 25.5,-92.5 \"/>\n",
+       "<text text-anchor=\"middle\" x=\"65.5\" y=\"-70.8\" font-family=\"Times,serif\" font-size=\"14.00\">data 2.0000</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"105.5,-56.5 105.5,-92.5 \"/>\n",
+       "<text text-anchor=\"middle\" x=\"146.5\" y=\"-70.8\" font-family=\"Times,serif\" font-size=\"14.00\">grad 0.0000</text>\n",
+       "</g>\n",
+       "<!-- 4823435920* -->\n",
+       "<g id=\"node6\" class=\"node\">\n",
+       "<title>4823435920*</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"253\" cy=\"-46.5\" rx=\"27\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"253\" y=\"-42.8\" font-family=\"Times,serif\" font-size=\"14.00\">*</text>\n",
+       "</g>\n",
+       "<!-- 4825868432&#45;&gt;4823435920* -->\n",
+       "<g id=\"edge8\" class=\"edge\">\n",
+       "<title>4825868432&#45;&gt;4823435920*</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M187.65,-58.05C197.94,-56.2 207.91,-54.41 216.81,-52.82\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"217.48,-56.25 226.71,-51.04 216.25,-49.36 217.48,-56.25\"/>\n",
+       "</g>\n",
+       "<!-- 4823435920 -->\n",
+       "<g id=\"node5\" class=\"node\">\n",
+       "<title>4823435920</title>\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"317,-28.5 317,-64.5 507,-64.5 507,-28.5 317,-28.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"328.5\" y=\"-42.8\" font-family=\"Times,serif\" font-size=\"14.00\">e</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"340,-28.5 340,-64.5 \"/>\n",
+       "<text text-anchor=\"middle\" x=\"382.5\" y=\"-42.8\" font-family=\"Times,serif\" font-size=\"14.00\">data &#45;6.0000</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"425,-28.5 425,-64.5 \"/>\n",
+       "<text text-anchor=\"middle\" x=\"466\" y=\"-42.8\" font-family=\"Times,serif\" font-size=\"14.00\">grad 0.0000</text>\n",
+       "</g>\n",
+       "<!-- 4823435920&#45;&gt;4826190800+ -->\n",
+       "<g id=\"edge9\" class=\"edge\">\n",
+       "<title>4823435920&#45;&gt;4826190800+</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M507.05,-62.67C516.78,-64.35 526.18,-65.96 534.62,-67.42\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"534.3,-70.91 544.75,-69.16 535.49,-64.01 534.3,-70.91\"/>\n",
+       "</g>\n",
+       "<!-- 4823435920*&#45;&gt;4823435920 -->\n",
+       "<g id=\"edge2\" class=\"edge\">\n",
+       "<title>4823435920*&#45;&gt;4823435920</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M280.28,-46.5C288.05,-46.5 297.08,-46.5 306.68,-46.5\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"306.88,-50 316.88,-46.5 306.88,-43 306.88,-50\"/>\n",
+       "</g>\n",
+       "<!-- 4826083984 -->\n",
+       "<g id=\"node7\" class=\"node\">\n",
+       "<title>4826083984</title>\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"0,-1.5 0,-37.5 190,-37.5 190,-1.5 0,-1.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"11.5\" y=\"-15.8\" font-family=\"Times,serif\" font-size=\"14.00\">b</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"23,-1.5 23,-37.5 \"/>\n",
+       "<text text-anchor=\"middle\" x=\"65.5\" y=\"-15.8\" font-family=\"Times,serif\" font-size=\"14.00\">data &#45;3.0000</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"108,-1.5 108,-37.5 \"/>\n",
+       "<text text-anchor=\"middle\" x=\"149\" y=\"-15.8\" font-family=\"Times,serif\" font-size=\"14.00\">grad 0.0000</text>\n",
+       "</g>\n",
+       "<!-- 4826083984&#45;&gt;4823435920* -->\n",
+       "<g id=\"edge4\" class=\"edge\">\n",
+       "<title>4826083984&#45;&gt;4823435920*</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M190.34,-35.83C199.62,-37.44 208.58,-38.99 216.66,-40.38\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"216.27,-43.87 226.72,-42.12 217.46,-36.97 216.27,-43.87\"/>\n",
+       "</g>\n",
+       "<!-- 4826199952 -->\n",
+       "<g id=\"node8\" class=\"node\">\n",
+       "<title>4826199952</title>\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"634,-0.5 634,-36.5 822,-36.5 822,-0.5 634,-0.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"644.5\" y=\"-14.8\" font-family=\"Times,serif\" font-size=\"14.00\">f</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"655,-0.5 655,-36.5 \"/>\n",
+       "<text text-anchor=\"middle\" x=\"697.5\" y=\"-14.8\" font-family=\"Times,serif\" font-size=\"14.00\">data &#45;2.0000</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"740,-0.5 740,-36.5 \"/>\n",
+       "<text text-anchor=\"middle\" x=\"781\" y=\"-14.8\" font-family=\"Times,serif\" font-size=\"14.00\">grad 0.0000</text>\n",
+       "</g>\n",
+       "<!-- 4826199952&#45;&gt;4825585296* -->\n",
+       "<g id=\"edge7\" class=\"edge\">\n",
+       "<title>4826199952&#45;&gt;4825585296*</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M822.29,-34.75C831.57,-36.37 840.52,-37.93 848.61,-39.33\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"848.22,-42.82 858.68,-41.09 849.42,-35.92 848.22,-42.82\"/>\n",
+       "</g>\n",
+       "<!-- 4826190800 -->\n",
+       "<g id=\"node9\" class=\"node\">\n",
+       "<title>4826190800</title>\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"635.5,-55.5 635.5,-91.5 820.5,-91.5 820.5,-55.5 635.5,-55.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"647\" y=\"-69.8\" font-family=\"Times,serif\" font-size=\"14.00\">d</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"658.5,-55.5 658.5,-91.5 \"/>\n",
+       "<text text-anchor=\"middle\" x=\"698.5\" y=\"-69.8\" font-family=\"Times,serif\" font-size=\"14.00\">data 4.0000</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"738.5,-55.5 738.5,-91.5 \"/>\n",
+       "<text text-anchor=\"middle\" x=\"779.5\" y=\"-69.8\" font-family=\"Times,serif\" font-size=\"14.00\">grad 0.0000</text>\n",
+       "</g>\n",
+       "<!-- 4826190800&#45;&gt;4825585296* -->\n",
+       "<g id=\"edge6\" class=\"edge\">\n",
+       "<title>4826190800&#45;&gt;4825585296*</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M820.51,-56.97C830.48,-55.17 840.13,-53.42 848.77,-51.86\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"849.55,-55.28 858.77,-50.06 848.3,-48.39 849.55,-55.28\"/>\n",
+       "</g>\n",
+       "<!-- 4826190800+&#45;&gt;4826190800 -->\n",
+       "<g id=\"edge3\" class=\"edge\">\n",
+       "<title>4826190800+&#45;&gt;4826190800</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M598.29,-73.5C606.26,-73.5 615.54,-73.5 625.39,-73.5\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"625.41,-77 635.41,-73.5 625.41,-70 625.41,-77\"/>\n",
+       "</g>\n",
+       "</g>\n",
+       "</svg>\n"
+      ],
+      "text/plain": [
+       "<graphviz.graphs.Digraph at 0x11fa1f810>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "draw_dot(L)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.000000000000334\n"
+     ]
+    }
+   ],
+   "source": [
+    "def lol():\n",
+    "    h = 0.001\n",
+    "\n",
+    "    a = Value(2.0, label='a')\n",
+    "    b = Value(-3.0, label='b')\n",
+    "    c = Value(10.0, label='c')\n",
+    "    #Below calls the equivalent of (a.__mul__(b)).__add__(c)\n",
+    "    e = a * b; e.label ='e'\n",
+    "    d = e + c; d.label ='d'\n",
+    "    f = Value(-2.0, label='f')\n",
+    "    L = d * f; L.label='L'\n",
+    "    L1 = L.data\n",
+    "\n",
+    "    a = Value(2.0, label='a')\n",
+    "    b = Value(-3.0, label='b')\n",
+    "    c = Value(10.0, label='c')\n",
+    "    #Below calls the equivalent of (a.__mul__(b)).__add__(c)\n",
+    "    e = a * b; e.label ='e'\n",
+    "    d = e + c; d.label ='d'\n",
+    "    f = Value(-2.0, label='f')\n",
+    "    L = d * f; L.label='L'\n",
+    "    L2 = L.data + h\n",
+    "\n",
+    "    print((L2 - L1)/h)\n",
+    "\n",
+    "lol()"
    ]
   }
  ],
